--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~ngx-owl-carousel-o/lib/styles/scss/owl.carousel'
+@import '~ngx-owl-carousel-o/lib/styles/scss/owl.theme.default'
+
+body, html
+    max-width: 1280px
+    display: flex
+    margin: 0 auto
+    background-color: #111
